# masterlist

./: .dockerignore  .env.example  .env.nextjs.example  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  AI-ANALYTICS-FEATURES.md  AI-ML-SETUP.md  CATEGORY-ENHANCEMENTS.md  CHANGELOG.md  CLAUDE.md  CLI_UTILITIES_README.md  CONTRIBUTING.md  COREVECTA.md  CREATE_ORGS.md  Dockerfile  Dockerfile.simple  GITHUB_PUSH_GUIDE.md  LICENSE  MANIFEST.in  MONITOR_CREATION.sh  Makefile  Makefile.docker  ORGANIZATION_MIGRATION_PLAN.md  PLATFORM_STATUS.md  PROJECT-ENHANCEMENT-SYSTEM.md  PROJECT-ENHANCEMENTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README-nextjs.md  README.md  REPOSITORY_CREATION_GUIDE.md  TAGGING_SYSTEM_README.md  UPDATE_PRIVACY.md  analyze-data.js  backup_20250710_214637_before_chrome_ext_analysis.sql  batch-report-cmcxx8yvh0000qj6sbmrpz866.json  batch-report-cmcxx8yvh0000qj6sbmrpz866.md  consolidate_projects.py  (+46 more)
.husky/: pre-commit
analysis/: chrome-extension-checklist-analysis.md  platform-enhancement-implementation.md
analysis-results/: category-distribution-report.json  comprehensive-content-analysis.json  quality-and-duplicates-report.json
analytics/: README.md  dashboard_analytics.py  performance_tracker.py  report_generator.py
automation/: README.md
collaboration/: README.md  __init__.py  feedback_system.py  project_sharing.py  team_workspace.py
coverage/: index.html  lcov.info
data/: ai_insights.json  projects.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CI_CD_GUIDE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCKER_GUIDE.md  FAQ.md  GITHUB_SETUP.md  IMPLEMENTATION_PLAN.md  PROJECT_HIERARCHY.md  TROUBLESHOOTING.md  USER_GUIDE.md  market-data-api.md
insights/: README.md  ai_insights.py  generate_insights.py
prisma/: schema.prisma  seed.ts
public/: site.webmanifest
qa/: README.md  integrity_checker.py  quality_scorer.py  run_qa.py  validation_system.py
reports/: repository-creation-report-2025-07-10T21-08-03-490Z.md
scripts/: README.md  add-indices.js  bulk-enhance.js  check-ai-services.sh  check-duplicates.js  complete-platform-analysis.md  demo.py  docker-quickstart.sh  emerging-blockchain-crypto-analysis.md  enhance-all-projects.ts  export-db-backup.js  filter.py  final-batch-recommendations.md  find-similar.py  init-db.js  make-admin.js  missing-platforms-analysis.md  normalize-categories.ts  parse-masterlist.js  platform-opportunity-analysis.md  saved_searches.json  search.py  search_infrastructure.py  setup-ollama-models.sh  test_system.py
src/: middleware.ts
tools/: compare-projects.py  market-analyzer.py  priority-scorer.py  project-tracker.py  recommendation-engine.py  smart-tagger.py
utils/: backup_restore.py  bulk_operations.py
web/: README.md  app.py  project_tags.json  (+3 more)
(+3516 files in other folders)
